--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id "org.sonarqube" version "3.5.0.2730"
 }
 
 android {
@@ -31,6 +32,14 @@ android {
     }
     buildFeatures {
         viewBinding true
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "jmendizabaln_pruebaSonarq"
+        property "sonar.organization", "jmendizabaln"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
 }
 
